--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ tex-corver-fastapi-utils = {git = "git@github.com:tex-corver/fastapi-utils.git"}
 fastapi = "^0.115.12"
 uvicorn = "^0.34.2"
 pydantic = "^2.11.4"
+vertexai = "^1.71.1"
 
 [tool.poetry.group.dev.dependencies]
 
