--- a/.configs/database.yaml
+++ b/.configs/database.yaml
@@ -1,5 +1,5 @@
 database:
-  type: mysql
+  type: sqlite
   framework: sqlalchemy
   connection:
-    url: mysql+pymysql://root:admin@192.168.0.100:3306/user_service
+    url: sqlite:///./llm_portal.sqlite
